<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/sizesButtonBar">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

        <Button android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:text="@string/size1" android:id="@+id/add1CommodityButton"/>

        <Button android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:text="@string/size23" android:id="@+id/add23CommodityButton"/>

        <Button android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:text="@string/size45" android:id="@+id/add45CommodityButton"/>

        <Button android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:text="@string/size6Plus" android:id="@+id/add6PlusCommodityButton"/>

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

        <TextView android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:id="@+id/totalOneCommodityTextView"/>

        <TextView android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:id="@+id/total23CommodityTextView"/>

        <TextView android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:id="@+id/total45CommodityTextView"/>

        <TextView android:layout_width="0.00dp" android:layout_height="wrap_content"
                android:layout_weight="0.25" android:id="@+id/total6PlusCommodityTextView"/>

    </LinearLayout>


</LinearLayout>